--- a/index.ipynb
+++ b/index.ipynb
@@ -1123,7 +1123,7 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
-    "    y_values = list(map(lambda))\n",
+    "    y_values = list(map(lambda x: ))\n",
     "    return dict({'x':x_values, 'y': list(map)})\n",
     "    pass"
    ]
