--- a/index.ipynb
+++ b/index.ipynb
@@ -1124,7 +1124,7 @@
    "source": [
     "def m_b_data(m, b, x_values):\n",
     "    y_values = list(map(lambda x: x*m+b, x_values))\n",
-    "    return dict({'x':x_values, 'y': list(map)})\n",
+    "    return dict({'x':x_values, 'y': y_values})\n",
     "    pass"
    ]
   },
