--- a/index.ipynb
+++ b/index.ipynb
@@ -1118,21 +1118,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
     "    y_values = list(map(lambda x: x*m+b, x_values))\n",
-    "    return dict({'x':x_values, 'y': y_values})\n",
-    "    pass"
+    "    return dict({'x':x_values, 'y': y_values})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': [0, 50, 100], 'y': [20.0, 95.0, 170.0]}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "m_b_data(1.5, 20, [0, 50, 100]) # {'x': [0, 50, 100], 'y': [20.0, 95.0, 170.0]}"
    ]
