--- a/index.ipynb
+++ b/index.ipynb
@@ -1161,7 +1161,7 @@
    "outputs": [],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
-    "    \n",
+    "    trace_data = list(map)\n",
     "    return {'mode': mode, 'name': name, }\n"
    ]
   },
