--- a/index.ipynb
+++ b/index.ipynb
@@ -1162,7 +1162,7 @@
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
     "    trace_data = m_b_data(m, b, x_values)\n",
-    "    return {'mode': mode, 'name': name, 'x': x_values, 'y': }\n"
+    "    return {'mode': mode, 'name': name, trace_data}\n"
    ]
   },
   {
