--- a/index.ipynb
+++ b/index.ipynb
@@ -1171,7 +1171,7 @@
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
     "    trace_data = m_b_data(m, b, x_values)\n",
-    "    trace_data.update()\n",
+    "    trace_data.update({'mode'})\n",
     "    return {'mode': mode, 'name': name, trace_data}\n"
    ]
   },
