--- a/index.ipynb
+++ b/index.ipynb
@@ -1171,8 +1171,8 @@
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
     "    trace_data = m_b_data(m, b, x_values)\n",
-    "    trace_data.update({'mode'})\n",
-    "    return {'mode': mode, 'name': name, trace_data}\n"
+    "    trace_data.update('mode': mode, 'name': name})\n",
+    "    return {, trace_data}\n"
    ]
   },
   {
