--- a/index.ipynb
+++ b/index.ipynb
@@ -1156,23 +1156,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-16-92e4af27a99f>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-92e4af27a99f>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return {'mode': mode, 'name': name, trace_data}\u001b[0m\n\u001b[0m                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
     "    trace_data = m_b_data(m, b, x_values)\n",
-    "    trace_data.update('mode': mode, 'name': name})\n",
-    "    return {, trace_data}\n"
+    "    trace_data.update({'mode': mode, 'name': name})\n",
+    "    return trace_data\n"
    ]
   },
   {
