Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1168,18 +1168,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'mode': 'lines',\n",
-       " 'name': 'line function',\n",
-       " 'data': {'x': [0, 50, 100], 'y': [20.0, 95.0, 170.0]}}"
+       "{'x': [0, 50, 100],\n",
+       " 'y': [20.0, 95.0, 170.0],\n",
+       " 'mode': 'lines',\n",
+       " 'name': 'line function'}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
