--- a/index.ipynb
+++ b/index.ipynb
@@ -1413,7 +1413,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    re"
+    "    return (y_values)/()"
    ]
   },
   {
