--- a/index.ipynb
+++ b/index.ipynb
@@ -1413,7 +1413,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    return (y_values[-1]-y_values[0])/()"
+    "    return (y_values[-1]-y_values[0])/(x_values[-1]-x_values)"
    ]
   },
   {
