--- a/index.ipynb
+++ b/index.ipynb
@@ -1451,7 +1451,7 @@
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
     "    m = slope(x_values, y_values)\n",
-    "    return "
+    "    return y_values"
    ]
   },
   {
