--- a/index.ipynb
+++ b/index.ipynb
@@ -1561,7 +1561,7 @@
    "outputs": [],
    "source": [
     "def expected_value_for_line(m, b, x_value):\n",
-    "    \n",
+    "    return \n",
     "    pass"
    ]
   },
