--- a/index.ipynb
+++ b/index.ipynb
@@ -1661,9 +1661,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'b': 150.0, 'm': 1.25}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "show_starting_line = build_starting_line(show_x_values, show_y_values)\n",
     "show_starting_line"
@@ -1671,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1680,9 +1691,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': [200, 400, 300, 600],\n",
+       " 'y': [400.0, 650.0, 525.0, 900.0],\n",
+       " 'mode': 'lines',\n",
+       " 'name': 'starting line'}"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "trace_show_line"
    ]
